--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "cross-env": "^7.0.2",
     "jquery": "^3.5.0",
     "tailwindcss": "^1.3.5"
   }
